upgrade:: create endpoint handle update name and avatar when register
