# be/internal/router/user/user.router.go
@@ -22,6 +22,7 @@ func (ur *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 		userRouterPublic.POST("/refresh_token", account.Login.RefreshToken) 
 		userRouterPublic.POST("/forgot_password", account.Login.ForgotPassword)
 		userRouterPublic.GET("/verify_forgot_password/:email/:token", account.Login.VerifyForgotPassword)
+		userRouterPublic.POST("/update_user_name_and_avatar", account.Login.UpdateUserNameAndAvatar)
 	}
 
 	// private router
